--- a/packages/console/src/pages/UserDetails/index.module.scss
+++ b/packages/console/src/pages/UserDetails/index.module.scss
@@ -5,7 +5,7 @@
 }
 
 .header {
-  padding: _.unit(8);
+  padding: _.unit(6);
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -14,16 +14,16 @@
     margin-left: _.unit(6);
   }
 
+  .imagePlaceholder {
+    margin-left: _.unit(2);
+  }
+
   .metadata {
     flex: 1;
 
     > div {
       display: flex;
       align-items: center;
-
-      &:not(:first-child) {
-        margin-top: _.unit(2);
-      }
 
       > *:not(:first-child) {
         margin-left: _.unit(2);
@@ -51,7 +51,7 @@
     }
 
     .copy {
-      padding: _.unit(1) _.unit(4) _.unit(1) _.unit(2);
+      padding: _.unit(1) _.unit(2) _.unit(1) _.unit(2);
     }
   }
 }
